# tianyancapital-cpptest

./: CMakeLists.txt  README.md  makefile
problems/: CMakeLists.txt
problems/q1/: market_data_a.hpp  market_data_b.hpp  market_data_processor.hpp  market_data_processor_a.hpp  market_data_processor_b.hpp  market_data_processor_base.hpp
problems/q2/: order.hpp  risk.hpp
problems/q3/: api.hpp  api_zmq_backup.hpp  order_rtn.hpp  singleton.hpp
problems/q4/: concurrent_queue.hpp  strategy.hpp
tests/: CMakeLists.txt  q1.cpp  q2.cpp  q3.cpp  q3_zmq_backup.cpp  q4.cpp
